src/XamlCompiler/GeneratedAntlr/SuccinctCollectionSyntaxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from src/XamlCompiler/Grammars/SuccinctCollectionSyntax/SuccinctCollectionSyntax.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SuccinctCollectionSyntaxParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SINGLE_QUOTE=1, DOUBLE_QUOTE=2, OPEN_SQUARE_BRACE=3, CLOSE_SQUARE_BRACE=4, 
		CHARACTER=5, COMMA=6, BACKSLASH=7, RESERVED_SYMBOL=8, QUOTE=9;
	public const int
		RULE_program = 0, RULE_items = 1, RULE_z = 2, RULE_item = 3, RULE_text = 4, 
		RULE_literal_text = 5, RULE_sequence = 6;
	public static readonly string[] ruleNames = {
		"program", "items", "z", "item", "text", "literal_text", "sequence"
	};

	private static readonly string[] _LiteralNames = {
		null, "'''", "'\"'", "'['", "']'", null, "','", "'\\'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SINGLE_QUOTE", "DOUBLE_QUOTE", "OPEN_SQUARE_BRACE", "CLOSE_SQUARE_BRACE", 
		"CHARACTER", "COMMA", "BACKSLASH", "RESERVED_SYMBOL", "QUOTE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SuccinctCollectionSyntax.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SuccinctCollectionSyntaxParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SuccinctCollectionSyntaxParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SuccinctCollectionSyntaxParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ItemsContext items() {
			return GetRuleContext<ItemsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SuccinctCollectionSyntaxParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 14;
			items();
			State = 15;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext item() {
			return GetRuleContext<ItemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ZContext z() {
			return GetRuleContext<ZContext>(0);
		}
		public ItemsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_items; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.EnterItems(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.ExitItems(this);
		}
	}

	[RuleVersion(0)]
	public ItemsContext items() {
		ItemsContext _localctx = new ItemsContext(Context, State);
		EnterRule(_localctx, 2, RULE_items);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 17;
			item();
			State = 18;
			z();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ZContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(SuccinctCollectionSyntaxParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext item() {
			return GetRuleContext<ItemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ZContext z() {
			return GetRuleContext<ZContext>(0);
		}
		public ZContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_z; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.EnterZ(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.ExitZ(this);
		}
	}

	[RuleVersion(0)]
	public ZContext z() {
		ZContext _localctx = new ZContext(Context, State);
		EnterRule(_localctx, 4, RULE_z);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 24;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA) {
				{
				State = 20;
				Match(COMMA);
				State = 21;
				item();
				State = 22;
				z();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SINGLE_QUOTE() { return GetTokens(SuccinctCollectionSyntaxParser.SINGLE_QUOTE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_QUOTE(int i) {
			return GetToken(SuccinctCollectionSyntaxParser.SINGLE_QUOTE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Literal_textContext literal_text() {
			return GetRuleContext<Literal_textContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DOUBLE_QUOTE() { return GetTokens(SuccinctCollectionSyntaxParser.DOUBLE_QUOTE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLE_QUOTE(int i) {
			return GetToken(SuccinctCollectionSyntaxParser.DOUBLE_QUOTE, i);
		}
		public ItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_item; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.EnterItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.ExitItem(this);
		}
	}

	[RuleVersion(0)]
	public ItemContext item() {
		ItemContext _localctx = new ItemContext(Context, State);
		EnterRule(_localctx, 6, RULE_item);
		try {
			State = 35;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Eof:
			case CHARACTER:
			case COMMA:
			case BACKSLASH:
				EnterOuterAlt(_localctx, 1);
				{
				State = 26;
				text();
				}
				break;
			case SINGLE_QUOTE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 27;
				Match(SINGLE_QUOTE);
				State = 28;
				literal_text();
				State = 29;
				Match(SINGLE_QUOTE);
				}
				break;
			case DOUBLE_QUOTE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 31;
				Match(DOUBLE_QUOTE);
				State = 32;
				literal_text();
				State = 33;
				Match(DOUBLE_QUOTE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHARACTER() { return GetToken(SuccinctCollectionSyntaxParser.CHARACTER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BACKSLASH() { return GetToken(SuccinctCollectionSyntaxParser.BACKSLASH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SequenceContext sequence() {
			return GetRuleContext<SequenceContext>(0);
		}
		public TextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_text; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.EnterText(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.ExitText(this);
		}
	}

	[RuleVersion(0)]
	public TextContext text() {
		TextContext _localctx = new TextContext(Context, State);
		EnterRule(_localctx, 8, RULE_text);
		int _la;
		try {
			State = 45;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Eof:
			case CHARACTER:
			case COMMA:
				EnterOuterAlt(_localctx, 1);
				{
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==CHARACTER) {
					{
					State = 37;
					Match(CHARACTER);
					State = 38;
					text();
					}
				}

				}
				break;
			case BACKSLASH:
				EnterOuterAlt(_localctx, 2);
				{
				State = 41;
				Match(BACKSLASH);
				State = 42;
				sequence();
				State = 43;
				text();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Literal_textContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHARACTER() { return GetToken(SuccinctCollectionSyntaxParser.CHARACTER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Literal_textContext literal_text() {
			return GetRuleContext<Literal_textContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BACKSLASH() { return GetToken(SuccinctCollectionSyntaxParser.BACKSLASH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SequenceContext sequence() {
			return GetRuleContext<SequenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESERVED_SYMBOL() { return GetToken(SuccinctCollectionSyntaxParser.RESERVED_SYMBOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(SuccinctCollectionSyntaxParser.COMMA, 0); }
		public Literal_textContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literal_text; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.EnterLiteral_text(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.ExitLiteral_text(this);
		}
	}

	[RuleVersion(0)]
	public Literal_textContext literal_text() {
		Literal_textContext _localctx = new Literal_textContext(Context, State);
		EnterRule(_localctx, 10, RULE_literal_text);
		int _la;
		try {
			State = 59;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SINGLE_QUOTE:
			case DOUBLE_QUOTE:
			case CHARACTER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==CHARACTER) {
					{
					State = 47;
					Match(CHARACTER);
					State = 48;
					literal_text();
					}
				}

				}
				break;
			case BACKSLASH:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 51;
				Match(BACKSLASH);
				State = 52;
				sequence();
				State = 53;
				literal_text();
				}
				}
				break;
			case RESERVED_SYMBOL:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 55;
				Match(RESERVED_SYMBOL);
				State = 56;
				literal_text();
				}
				}
				break;
			case COMMA:
				EnterOuterAlt(_localctx, 4);
				{
				{
				State = 57;
				Match(COMMA);
				State = 58;
				literal_text();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SequenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHARACTER() { return GetToken(SuccinctCollectionSyntaxParser.CHARACTER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESERVED_SYMBOL() { return GetToken(SuccinctCollectionSyntaxParser.RESERVED_SYMBOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QUOTE() { return GetToken(SuccinctCollectionSyntaxParser.QUOTE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(SuccinctCollectionSyntaxParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BACKSLASH() { return GetToken(SuccinctCollectionSyntaxParser.BACKSLASH, 0); }
		public SequenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.EnterSequence(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISuccinctCollectionSyntaxListener typedListener = listener as ISuccinctCollectionSyntaxListener;
			if (typedListener != null) typedListener.ExitSequence(this);
		}
	}

	[RuleVersion(0)]
	public SequenceContext sequence() {
		SequenceContext _localctx = new SequenceContext(Context, State);
		EnterRule(_localctx, 12, RULE_sequence);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 992L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
